SOLR-10452: setQueryParams should be deprecated in favor of SolrClientBuilder methods (#1253)
Moved setQueryParams to the Builder, and renamed it to setUrlParamNames, to make it clearer that it's just the name of url parameters.

Co-authored-by: Alex Deparvu <stillalex@apache.org>
Co-authored-by: David Smiley <dsmiley@apache.org>